Fixed multi page border issues and margin spacing

--- a/Updated Site CSS.css
+++ b/Updated Site CSS.css
@@ -85,6 +85,10 @@ img { -webkit-border-radius:2px; -moz-border-radius:2px; border-radius:2px; }
 	background-color: white;
 }
 
+.nav li a {
+	border-right: none; border-left: none;
+}
+
 .btn-navbar {
 	text-shadow: none !important;
 	background-color: transparent !important;
@@ -137,9 +141,10 @@ img { -webkit-border-radius:2px; -moz-border-radius:2px; border-radius:2px; }
 }
 .sidebar { text-align: center; margin-top: 1em;  }
 .sidebar h3 { font-family: tahoma, "Lucida Grande", sans-serif;
-	font-size: 1.1em; color:white; margin-bottom: 1em; background:#1244b5;
+ 	color:white; background:#1244b5;
 	border: 1px solid #1244b5; border-top-left-radius: 4px; border-top-right-radius: 4px;
-	padding:.5em;	text-align: center; margin: .8em 0 1.2em 0;
+	padding:7px;	text-align: center; font-weight: 500;
+	color:white; margin-bottom: 0px; text-transform: uppercase; font-size: 14px; line-height: 20px;
 }
 .smc_icon_container { text-align: center;  opacity: .9; }
 .smc_icon_container:hover { opacity: 1; }
@@ -552,7 +557,7 @@ h3#order_review_heading {
   color: #087800;
 	font-size: 1.5em!important;
   font-size: 1.6rem;
-  border-bottom: 1px solid #0B8C02;
+  border-bottom: 1px solid grey;
   cursor: default;
 }
 .blog-content p { padding:1em 0 0; }
@@ -587,7 +592,7 @@ h3#order_review_heading {
 }
 .home-blurb h1 { text-align: center; font-weight: 500;font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif; color:#009f2d;  }
 .home-blurb h3 { text-align: center; font-weight: 500;font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif; color:#009f2d;  }
-.home-blurb .sidebar h3 { color:white; margin-bottom: 0px; text-transform: uppercase; font-size: 14px; }
+.home-blurb .sidebar h3 { color: white; }
 .home-blurb h5 {
   z-index: 2;
   position: relative;
